<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_address_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAddressFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.AddressMemo.AppBarOverlay">

        <ImageView
            android:id="@+id/create_address_back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/create_address_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:letterSpacing="0.1"
            android:paddingHorizontal="6dp"
            android:text="@string/create_address_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_address_name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/white">

                <EditText
                    android:id="@+id/create_address_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_address_hint_name"
                    android:inputType="textAutoCorrect"
                    android:maxLength="30"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_address_line1_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <EditText
                    android:id="@+id/create_address_line1_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_address_hint_address_1"
                    android:inputType="textAutoCorrect"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_address_line2_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <EditText
                    android:id="@+id/create_address_line2_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_address_hint_address_2"
                    android:inputType="textAutoCorrect"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_address_landmark_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:boxBackgroundColor="@color/white">

                <EditText
                    android:id="@+id/create_address_landmark_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_address_hint_landmark"
                    android:inputType="textAutoCorrect"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_address_city_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:boxBackgroundColor="@color/white">

                <EditText
                    android:id="@+id/create_address_city_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_address_hint_city"
                    android:inputType="textAutoCorrect"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_address_state_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:boxBackgroundColor="@color/white">

                <EditText
                    android:id="@+id/create_address_state_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_address_hint_state"
                    android:inputType="textAutoCorrect"
                    android:maxLength="25"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_address_pin_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:boxBackgroundColor="@color/white">

                <EditText
                    android:id="@+id/create_address_pin_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_address_hint_pincode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/create_address_default_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                android:padding="8dp"
                android:text="@string/create_address_checkbox_text"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

            <Button
                android:id="@+id/create_address_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/teal_200"
                android:foreground="@drawable/ic_baseline_arrow_forward_24"
                android:foregroundGravity="center"
                android:gravity="center"
                android:padding="8dp" />
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/progress_bar_light_background"
        android:visibility="gone" />
</RelativeLayout>